--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-
-sdk.dir=
+#Mon Jul 15 13:43:04 IST 2024
+sdk.dir=/Users/sureshseeni/Library/Android/sdk
